--- a/menu.css
+++ b/menu.css
@@ -1,6 +1,6 @@
 body {
     width: 100%;
-    height: 100%;
+    height: 50%
     margin: 0;
     padding: 0;
     background-color: #78A1C4;
@@ -9,7 +9,7 @@ body {
 .menubar {
     position: fixed;
     width: 100%;
-    height: 60px;
+    height: 0px;
     top: 0;
     left: 0;
     background: #ffffff;
