--- a/LoginV2/estilo.css
+++ b/LoginV2/estilo.css
@@ -268,10 +268,12 @@ h3 {
         width: 50%;
         height: 450px;
         padding-top: 50px;
+        border-radius: 5px;
     }
 
     .columna-derecha {
         display: inline-block;
+        border-radius: 5px;
     }
 
    .columna-izquierda .fix-form {
@@ -314,5 +316,8 @@ h3 {
         position: absolute;
         top: 50px;
         left: 50px;
+    }
+    .fix-form {
+        height: 450px;
     }
 }
